--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
           <br>
         </div>
         <p class="white-text h5-responsive mt-4 mb-2 ml-2 mr-2">
-          No 14 C1, Ammamandapam Rd, Srirangam, Tamil Nadu 620006
+          V.G.Mahal,<br>No 14 C1, Ammamandapam Rd, Srirangam, Tamil Nadu 620006
         </p>
       </div>
     </div>
@@ -302,7 +302,7 @@
           <br>
         </div>
         <p class="white-text h5-responsive mt-4 mb-2 ml-2 mr-2">
-          No 14 C1, Ammamandapam Rd, Srirangam, Tamil Nadu 620006
+          V.G.Mahal,<br>No 14 C1, Ammamandapam Rd, Srirangam, Tamil Nadu 620006
         </p>
       </div>
     </div>
