updated index href

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <nav class="navbar falling-hearts-pink fixed-top navbar-expand-xl navbar-dark">
 
-    <a class="navbar-brand font-weight-bold" href="index.html">
+    <a class="navbar-brand font-weight-bold" href="https://abishekrahul.github.io/kou-swathi-wedding/">
       Wedding Invitation
     </a>
 
