added eash wedding changes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <img src="./v2/img/pair-bride.png" alt="groom" class="img-responsive">
           </div>
           <div class="desc-bride">
-            <h3>Varssha Nagarajan</h3>
+            <h3>Varssha</h3>
             <p class="header-invitation-text">A Beautiful woman with a fine prospect of happiness behind her. There is something magical about becoming the bride. There is something special about the commitment of spending the eternity with the man she loves.</p>
           </div>
         </div>
